style fixes fix top navigation - right and left are vertically aligned and the right ones go to the left when wrapped around fix background resizing - it now resizes every time it redraws since scroll bars and switching pages mess with it main container will always fill the whole screen alerts no longer prevent the clicking of the login/signup buttons

--- a/src/app/styles/_navigation.scss
+++ b/src/app/styles/_navigation.scss
@@ -2,9 +2,9 @@
 
 div#navigation {
   padding: 1em;
+  text-align-last: justify;
 
   a.item {
-    display: inline-block;
     color: white;
     text-transform: uppercase;
     font-family: $font-title, serif !important;
@@ -14,13 +14,16 @@ div#navigation {
     }
 
     margin-right: 1em;
+  }
 
-    &.right {
-      float: right;
-      margin-right: 0;
-      margin-left: 1em;
-    }
+  .left-nav {
+    display: inline-block;
+    text-align-last: left;
+  }
 
+  .right-nav {
+    display: inline-block;
+    text-align-last: left;
   }
 }
 
